--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.20
   firebase_core: ^1.18.0
+  image_picker: ^0.8.5+3
+  firebase_storage: ^10.2.18
   flutter:
     sdk: flutter
+  cloud_firestore: ^3.1.18
 
 dev_dependencies:
 
